--- a/templates/page3.html
+++ b/templates/page3.html
@@ -81,6 +81,13 @@ a.repeat:hover {
   margin-bottom: 20px;
 }
 
+.title {
+	color: #007acc;
+    text-align: center;
+    margin-bottom: 20px;
+	font-size: 32px;
+}
+
 .btn {
   display: inline-block;
   background-color: #007acc;
@@ -141,8 +148,20 @@ a.repeat:hover {
 
     <div class="paragraph">
  		<div class="animate four">
-			<span>Selamün Aleyküm</span> &nbsp;
-			<span>Merhaba</span>
+			<span class="title">S</span>
+			<span class="title">U</span>&nbsp;&nbsp;
+			<span class="title">İ</span>
+			<span class="title">L</span>
+			<span class="title">E</span>&nbsp;&nbsp;
+			<span class="title">H</span>
+			<span class="title">İ</span>
+			<span class="title">K</span>
+			<span class="title">A</span>
+			<span class="title">Y</span>
+			<span class="title">E</span>
+			<span class="title">M</span>
+			<span class="title">İ</span>
+			<span class="title">Z</span>&nbsp;
 		</div>
     </div>
 
