--- a/templates/page3.html
+++ b/templates/page3.html
@@ -4,11 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Su ile İlgili Hikaye</title>
-	
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
   <style>
 * {
 	margin: 0;
@@ -18,7 +13,7 @@
  body {
 	font-family: 'Lato', sans-serif;
 	font-size: 14px;
-	color: #999;
+	color: #46CFCD;
 	word-wrap: break-word;
  }
 
@@ -30,38 +25,6 @@
 	text-align: center;
 	padding: 0 0 200px;
 }
-
-.animate {
-	font-size: 50px;
-	margin: 100px 0 0;
-	border-bottom: 2px solid #ccc;
-}
-
-.animate span {
-	display: inline-block;
-}
-
-a.repeat {
-  display: inline-block;
-  font-size: 12px;
-  text-transform: none;
-  color: orange;
-  padding: 5px 12px;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  font-weight: normal;
-  margin-left: 50px;
-  border-radius: 3px;
-  position: relative;
-  bottom: 15px;
-}
-
-a.repeat:hover {
-  background: rgba(0, 0, 0, 0.7);
-  color: white;
-}
-
-.animate span:nth-of-type(1) { animation-delay: .5s; }
-.animate span:nth-of-type(2) { animation-delay: 1s; }
 
 .content {
   background-color: white;
@@ -92,6 +55,7 @@ a.repeat:hover {
   display: inline-block;
   background-color: #007acc;
   color: white;
+  text-align: center;
   padding: 12px 25px;
   border-radius: 25px;
   text-decoration: none;
@@ -117,59 +81,41 @@ a.repeat:hover {
     font-size: 1em;
   }
 }
-	  
-.four span {
-	color: #8d6a00;
-	opacity: 0;
-	transform: translate(0, -100px) rotate(360deg) scale(0);
-	animation: revolveDrop .3s forwards;
-}
-
-
-@keyframes revolveDrop {
-	30% {
-		transform: translate(0, -50px) rotate(180deg) scale(1);
-	}
-
-	60% {
-		transform: translate(0, 20px) scale(.8) rotate(0deg);
-	}
-
-	100% {
-		transform: translate(0) scale(1) rotate(0deg);
-		opacity: 1;
-	}
-}
+  .highlight {
+	font-weight: 900;
+  }
   </style>
 </head>
 <body>
 
   <div class="content">
-
-    <div class="paragraph">
- 		<div class="animate four">
-			<span class="title">S</span>
-			<span class="title">U</span>&nbsp;&nbsp;
-			<span class="title">İ</span>
-			<span class="title">L</span>
-			<span class="title">E</span>&nbsp;&nbsp;
-			<span class="title">H</span>
-			<span class="title">İ</span>
-			<span class="title">K</span>
-			<span class="title">A</span>
-			<span class="title">Y</span>
-			<span class="title">E</span>
-			<span class="title">M</span>
-			<span class="title">İ</span>
-			<span class="title">Z</span>&nbsp;
-		</div>
-    </div>
-
     <form action="/" method="post">
         <button class="btn" type="submit">Geri Dön?</button>
     </form>
-
-  </div>
+	  <h1 class="title">SON SU KAYNAĞI 1</h1>
+	  <div class="paragraph">Yıl 2054’tü.
+		  Bir zamanlar deniz kokan şehirlerde şimdi rüzgâr bile kuru esiyordu.
+		  Gökyüzü hâlâ mavi görünüyordu ama bulutlar artık su taşımıyordu.
+		  Türkiye’nin çoğu yerinde su damlaları devletin koruması altındaydı;
+		  insanlar “Su İzin Kartı” olmadan bir şişe su bile alamıyordu. <h5 class="highlight">Komiser Derya Yalın, </h5>
+		  İstanbul Su Suçları Birimi’nin en iyi polislerinden biriydi.
+		  Onun görevi, kaçak kuyuları bulmak, yasa dışı su satıcılarını yakalamaktı.
+		  Ama Derya’nın işi her geçen gün daha zorlaşıyordu , çünkü insanlar umutsuzdu.
+	  </div>
+	  <div class="paragraph">Evine geldiğinde, 12 yaşındaki oğlu <h5 class="highlight">Emirhan, </h5>
+		  mutfak masasında eski bir tabletin ekranına eğilmişti. <br>
+		  “Anne! Bak, bir çocuk suyun altında yaşayan şehir yapmış. Dalgıç robotlarla yaşıyorlar! Biz de öyle olsak keşke.” <br>
+		  Derya gülümsedi. <br>
+		  “Keşke oğlum. Ama önce o kadar su bulmamız lazım.” <br>
+		  O sırada Derya’nın bileğindeki akıllı bilezik titredi. <br>
+		  <h5 class="highlight">Acil Bildirim: Su Kaçakçılığı Şüphesi  Marmara Bölgesi, Tuz Gölü Yakını.</h5> <br>
+		  Derya’nın gözleri ciddileşti. <br>
+		  “Emirhan, ben çıkıyorum. Geç kalma, tamam mı?” <br>
+		  Ama Emirhan meraklıydı. Her zaman annesinin davalarına gizliden gizliden bakar, ipuçlarını araştırırdı. <br>
+		  O gece de öyle yaptı. <br>
+		  Derya gittikten sonra bilekliğin eski kayıtlarına baktı. <br>
+		  Koordinatlar açıkça yazıyordu: <h5 class="highlight">Tuz Gölü Bölge 9.</h5>
+      </div>
 
 </body>
 </html>
