--- a/templates/page3.html
+++ b/templates/page3.html
@@ -13,7 +13,7 @@
  body {
 	font-family: 'Lato', sans-serif;
 	font-size: 14px;
-	color: #46CFCD;
+	background-color: #46CFCD;
 	word-wrap: break-word;
  }
 
