--- a/templates/page3.html
+++ b/templates/page3.html
@@ -31,7 +31,7 @@
       background-color: white;
       border: 5px solid #00a0ff;
       border-radius: 40px;
-      max-width: 2000px;
+      max-width: 1550px;
       margin: 40px auto;
       padding: 25px 30px;
       box-shadow: 0 0 100px rgba(0, 0, 0, 0.25);
@@ -86,6 +86,21 @@
     .highlight {
       font-weight: 900;
     }
+
+	  p {
+outline-color: blue;
+padding: 5px;
+}
+
+p.dotted {outline-style: dotted;}
+p.dashed {outline-style: dashed;}
+p.solid {outline-style: solid;}
+p.double {outline-style: double;}
+p.groove {outline-style: groove;}
+p.ridge {outline-style: ridge;}
+p.inset {outline-style: inset;}
+p.outset {outline-style: outset;}
+	  
   </style>
 </head>
 
@@ -96,7 +111,7 @@
       <button class="btn" type="submit">Geri Dön?</button>
     </form>
 	  <h1 class="title">SUİJİN’İN GÖZYAŞLARI</h1>
-	  <p class="paragraph">
+	  <p class="paragraph" class="solid">
 Hikayemize başlamadan önce size Suijin hakkında bilgi vermek istiyorum.
 Suijin Japon mitolojisinde önemli bir konumdadır.
 		  Tatlı su kaynaklarını korumak nehir ve pınarlara zarar verilmesini önlemek gibi önemli görevlere sahip bir su tanrısıdır. <br> <br> <br>
@@ -133,9 +148,11 @@ Suijin: <br>
 -Sizin suyu yanlış kullanıp boşa harcamanızdan dolayı. <br> <br>
 
 -Halk bu masum insanları izlerken aynı zamanda ne kadar yanlış bir şey yaptıklarının farkına varmışlardı.Suijin köyü tekrar hayata döndürdü ve Afrika’nın susuzluğu da bir milim azalmış oldu.</p>
-	  <p class="paragraph">
-SON SU KAYNAĞI 1
-Bölüm 1.1: Suların Sessizliği
+  </div>
+	<div class="content"> 
+		<p class="paragraph">
+<h1>SON SU KAYNAĞI 1</h1>
+<h4 class="title">Bölüm 1.1: Suların Sessizliği</h4>
 Yıl 2054’tü.
 Bir zamanlar deniz kokan şehirlerde şimdi rüzgâr bile kuru esiyordu. Gökyüzü hâlâ mavi görünüyordu ama bulutlar artık su taşımıyordu. Türkiye’nin çoğu yerinde su damlaları devletin koruması altındaydı; insanlar “Su İzin Kartı” olmadan bir şişe su bile alamıyordu.
 Komiser Derya Yalın, İstanbul Su Suçları Birimi’nin en iyi polislerinden biriydi. Onun görevi, kaçak kuyuları bulmak, yasa dışı su satıcılarını yakalamaktı.
@@ -414,6 +431,6 @@ Su tükenirken umut yeniden filizlenebilir mi?
 Yoksa insanlık kendi yaptığı yapay yağmurun altında mı boğulacak?
 
 	  </p>
-  </div>
+	</div>
 </body>
 </html>
