--- a/templates/page3.html
+++ b/templates/page3.html
@@ -111,7 +111,7 @@ p.outset {outline-style: outset;}
       <button class="btn" type="submit">Geri Dön?</button>
     </form>
 	  <h1 class="title">SUİJİN’İN GÖZYAŞLARI</h1>
-	  <p class="paragraph" class="solid">
+	  <p class="paragraph solid">
 Hikayemize başlamadan önce size Suijin hakkında bilgi vermek istiyorum.
 Suijin Japon mitolojisinde önemli bir konumdadır.
 		  Tatlı su kaynaklarını korumak nehir ve pınarlara zarar verilmesini önlemek gibi önemli görevlere sahip bir su tanrısıdır. <br> <br> <br>
@@ -150,9 +150,9 @@ Suijin: <br>
 -Halk bu masum insanları izlerken aynı zamanda ne kadar yanlış bir şey yaptıklarının farkına varmışlardı.Suijin köyü tekrar hayata döndürdü ve Afrika’nın susuzluğu da bir milim azalmış oldu.</p>
   </div>
 	<div class="content"> 
-		<p class="paragraph">
-<h1>SON SU KAYNAĞI 1</h1>
-<h4 class="title">Bölüm 1.1: Suların Sessizliği</h4>
+		<h1>SON SU KAYNAĞI 1</h1>
+		<h4 class="title">Bölüm 1.1: Suların Sessizliği</h4>
+		<p class="paragraph solid">
 Yıl 2054’tü.
 Bir zamanlar deniz kokan şehirlerde şimdi rüzgâr bile kuru esiyordu. Gökyüzü hâlâ mavi görünüyordu ama bulutlar artık su taşımıyordu. Türkiye’nin çoğu yerinde su damlaları devletin koruması altındaydı; insanlar “Su İzin Kartı” olmadan bir şişe su bile alamıyordu.
 Komiser Derya Yalın, İstanbul Su Suçları Birimi’nin en iyi polislerinden biriydi. Onun görevi, kaçak kuyuları bulmak, yasa dışı su satıcılarını yakalamaktı.
