--- a/templates/page5.html
+++ b/templates/page5.html
@@ -52,7 +52,6 @@
     h3:nth-of-type(14) { animation-delay: 4.75s; }
     h3:nth-of-type(15) { animation-delay: 5s; }
     h3:nth-of-type(16) { animation-delay: 5.25s; }
-    h2.poet { animation-delay: 6s; text-align: right; }
 
     @keyframes fadeIn {
       to { opacity: 1; }
@@ -113,71 +112,23 @@
   </div>
 
   <div class="content">
-      <h1>AB-ı ruy</h1>
-      <h3>Ab gibi akarsın gönül şahrasında</h3>
-      <h3>Her katre bir sırdır dilden duada</h3>
-      <h3>Ahest düşersin taşır, koynuna</h3>
-      <h3>Ve taş dahi incinir, gönül şemasında</h3>
-      <br>
+      <h1>Su ile ilgili 40 ilginç gerçek</h1>
+      <h3>Dünyadaki tatlı suyun %68,7'si buzullarda hapsolmuştur. Tatlı suyun %30'u yerdedir.</h3>
+      <h3>Dünyadaki suyun %1,7'si donmuş ve bu nedenle kullanılamaz durumdadır.</h3>
+      <h3>Dört kişilik bir ailenin günlük yiyeceğini yetiştirmek için yaklaşık 6.800 galon su gerekir. </h3>
+      <h3>Suyun donma noktası, içinde çözünen tuz miktarı arttıkça düşer. Ortalama tuz seviyelerinde deniz suyu -2 °C'de donar.k yiyeceğini yetiştirmek için yaklaşık 6.800 galon su gerekir.</h3>
       <h3>Su, ey ezeli hağme,</h3>
       <h3>Gönlün gamını siler</h3>
       <h3>Ruhun hararetini dindirir,</h3>
       <h3>Kalbe şafa bahseder.</h3>
-      <br>
       <h3>Ab olur umanana karışırsın,</h3>
       <h3>Bahr olur, şemaya yansırsın,</h3>
       <h3>Her damlan bir nefes,</h3>
       <h3>her akışın bir hayat.</h3>
-      <br>
       <h3>Bil ki sen</h3>
       <h3>Hakk'ın en sessiz kelamısın,</h3>
       <h3>Bir damlada cihan gizlenir</h3>
       <h3>Ve cihanda bir damla eksik değildir</h3>
-      <br>
-      <h2 class="poet">-Taha Eren UŞAK</h2>
-  </div>
-
-    <div class="content">
-      <h1>Ab ile Bahar</h1>
-      <h3>Ab-ı cuyda gülyaprağı yüzer</h3>
-      <h3>Rüzgar öper mehtapon süzer</h3>
-      <h3>Gönlümde o yaprak gibi soluk</h3>
-      <h3>Her bahar geçer,hüzün bende</h3>
-      <br>
-      <h3>Çiçek ağlar ab'dan uzakta</h3>
-      <h3>Toprak ağlar ab'dan uzakta</h3>
-      <h3>Ab kadar ulusu varmıdır cihanda</h3>
-      <h3>Bir Damlası için koşulur dört nala</h3>
-      <h2 class="poet">-Taha Eren UŞAK</h2>
-  </div>
-
-  <div class="content">
-      <h1>Cuy-ı Dil</h1>
-      <h3>Gözlerinden bir çuy akar,</h3>
-      <h3>Ab-ı hayat misali,</h3>
-      <h3>Her bakışın bir derya,</h3>
-      <h3>İçimde umman hali.</h3>
-      <br>
-      <h3>Ben bir damlayım,</h3>
-      <h3>Sen sonsuz bir deniz</h3>
-      <h3>Göklerden düşerken asil sularına,</h3>
-      <h3>Bir yudum Ab-ı hayat olsan yeter bana</h3>
-      <h2 class="poet">-Taha Eren UŞAK</h2>
-  </div>
-
-  
-  <div class="content">
-      <h1>Selsebi-i Firkat</h1>
-      <h3>Selsebil akar gönül çayında</h3>
-      <h3>Her damla gam taşır derün-ı hayanda</h3>
-      <h3>Firkat rüzgarı savurur beni</h3>
-      <h3>Hüznüm olur ab sahyasında</h3>
-      <br>
-      <h3>Çeşme taşına düşer sessizce</h3>
-      <h3>Kütresinde gizli bin ab üsitab</h3>
-      <h3>Mehtab bakar mahsun gözlerime</h3>
-      <h3>Selsebil-i Firkat akar gözlerine</h3>
-      <h2 class="poet">-Taha Eren UŞAK</h2>
   </div>
 
 </body>
