--- a/templates/index.html
+++ b/templates/index.html
@@ -331,6 +331,10 @@
     <form action="/kaynakca" method="post">
       <button class="btn" type="submit">Kullanılan Kaynaklar</button>
     </form>
+    <br><br>
+    <form action="/ilginc-gercekler" method="post">
+      <button class="btn" type="submit">İlginç Gerçekler (Su ile ilgili)</button>
+    </form>
   </div>
 
   <div class="content-second">
