--- a/templates/index.html
+++ b/templates/index.html
@@ -287,6 +287,52 @@
       min-height: 100px;
       resize: vertical;
     }
+
+    .video-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.75);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.video-box {
+  position: relative;
+  background: #fff;
+  padding: 10px;
+  border-radius: 15px;
+  max-width: 90%;
+  max-height: 80%;
+  box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.video-box video {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.close-video {
+  position: absolute;
+  top: -15px;
+  right: -15px;
+  background: red;
+  color: white;
+  border: none;
+  font-size: 18px;
+  font-weight: bold;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 0 5px black;
+}
+    
   </style>
 </head>
 
@@ -335,6 +381,10 @@
     <form action="/ilginc-gercekler" method="post">
       <button class="btn" type="submit">İlginç Gerçekler (Su ile ilgili)</button>
     </form>
+  </div>
+
+  <div class="content-second">
+      <button class="btn" id="openVideoBtn">Videoyu Aç</button>
   </div>
 
   <div class="content-second">
@@ -465,5 +515,39 @@
     }
   </script>
 
+    <script>
+  const openBtn = document.getElementById("openVideoBtn");
+  const modal = document.getElementById("videoModal");
+  const closeBtn = document.querySelector(".close-video");
+  const video = document.getElementById("videoPlayer");
+
+  openBtn.addEventListener("click", function () {
+    modal.style.display = "flex";
+    video.currentTime = 0; 
+    video.play();
+  });
+
+  closeBtn.addEventListener("click", function () {
+    modal.style.display = "none";
+    video.pause();
+  });
+    
+  modal.addEventListener("click", function (e) {
+    if (e.target === modal) {
+      modal.style.display = "none";
+      video.pause();
+    }
+  });
+</script>
+    
+  <div id="videoModal" class="video-overlay">
+    <div class="video-box">
+      <button class="close-video">X</button>
+      <video controls id="videoPlayer">
+        <source src="{{ url_for('static', filename='video.mp4') }}" type="video/mp4">
+        Tarayıcınız bu videoyu desteklemiyor.
+      </video>
+    </div>
+  </div>
 </body>
 </html>
