--- a/templates/index.html
+++ b/templates/index.html
@@ -544,7 +544,7 @@
     <div class="video-box">
       <button class="close-video">X</button>
       <video controls id="videoPlayer">
-        <source src="{{ url_for('static', filename='video.mp4') }}" type="video/mp4">
+        <source src="https://file.garden/aSAGHW7wGDOKPZAQ/video.mp4" type="video/mp4">
         Tarayıcınız bu videoyu desteklemiyor.
       </video>
     </div>
