--- a/templates/page5.html
+++ b/templates/page5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Su ile İlgili Şiir</title>
+  <title>Su ile İlgili İlginç Bilgiler</title>
   <style>
     * {
       box-sizing: border-box;
@@ -117,18 +117,18 @@
       <h3>Dünyadaki suyun %1,7'si donmuş ve bu nedenle kullanılamaz durumdadır.</h3>
       <h3>Dört kişilik bir ailenin günlük yiyeceğini yetiştirmek için yaklaşık 6.800 galon su gerekir. </h3>
       <h3>Suyun donma noktası, içinde çözünen tuz miktarı arttıkça düşer. Ortalama tuz seviyelerinde deniz suyu -2 °C'de donar.k yiyeceğini yetiştirmek için yaklaşık 6.800 galon su gerekir.</h3>
-      <h3>Su, ey ezeli hağme,</h3>
-      <h3>Gönlün gamını siler</h3>
-      <h3>Ruhun hararetini dindirir,</h3>
-      <h3>Kalbe şafa bahseder.</h3>
-      <h3>Ab olur umanana karışırsın,</h3>
-      <h3>Bahr olur, şemaya yansırsın,</h3>
-      <h3>Her damlan bir nefes,</h3>
-      <h3>her akışın bir hayat.</h3>
-      <h3>Bil ki sen</h3>
-      <h3>Hakk'ın en sessiz kelamısın,</h3>
-      <h3>Bir damlada cihan gizlenir</h3>
-      <h3>Ve cihanda bir damla eksik değildir</h3>
+      <h3>780 milyon insanın temiz su kaynağına erişimi yok.</h3>
+      <h3>Aileleri için su toplayan kadınlar sadece bir günde 200 milyon çalışma saati harcıyor.</h3>
+      <h3>Dünyanın bir yılda şişelenmiş suya harcadığı miktarın 1/3'ü, ihtiyacı olan herkese su sağlayan projeler için karşılanabilir.</h3>
+      <h3>İnsan beyninin %70'i sudur.</h3>
+      <h3>Bir denizanası ve bir salatalığın her birinin %95'i sudur.</h3>
+      <h3>Gelişmekte olan ülkelerdeki tüm hastalıkların %80'i suyla ilgilidir.</h3>
+      <h3>Gelişmekte olan ülkelerdeki şehirlerde gerçekleşen sızıntılar nedeniyle suyun %50'ye varan kısmı kaybedilmektedir.</h3>
+      <h3>Bazı ülkelerde, nüfusun yarısından azının temiz suya erişimi var.</h3>
+      <h3>Bir insan yemek yemeden yaklaşık bir ay yaşayabilir, ancak susuz sadece bir hafta yaşayabilir.</h3>
+      <h3>Su donduğunda %9 genişler.</h3>
+      <h3>Dünya'nın tahmini toplam su hacmini tutabilecek bir küpün kenar uzunluğu km 1150 km. olurdu.</h3>
+      <h3>Milyonlarca yıl önce olduğu gibi, şimdi de Dünya'da aynı miktarda su var.</h3>
   </div>
 
 </body>
