--- a/templates/index.html
+++ b/templates/index.html
@@ -376,6 +376,13 @@
       <button class="btn" id="openVideoBtn">Videoyu Aç</button>
   </div>
 
+    <main class="main-layout">
+    <div class="content">
+      <p class="paragraph">Burada ise bizim su ile ilgili videomuz</p>
+      <button class="btn" id="openVideoBtn">Videoyu Aç</button>
+    </div>
+  </main>
+
   <div class="content-second">
     <h1>Türkiye’de Kuraklık Tehdidi: Su Kaynakları Azalıyor.</h1>
     <p class="paragraph">
