--- a/templates/index.html
+++ b/templates/index.html
@@ -210,10 +210,13 @@
       transform: scale(1.1);
       background-color: #005f99;
     }
+    
+.center {
+  display: flex;
+  justify-content: center;
+}
 
-    .center {
-        text-align: center;
-    }
+
 
     .button-row {
       display: flex;
@@ -375,11 +378,14 @@
       <button class="btn" type="submit">İlginç Gerçekler (Su ile ilgili)</button>
     </form>
   </div>
+  <div class="content">
+    <p class="paragraph center">Burada ise bizim su ile ilgili videomuz</p>
 
-    <div class="content">
-      <p class="paragraph center">Burada ise bizim su ile ilgili videomuz</p>
-      <button class="btn center" id="openVideoBtn">Videoyu Aç</button>
-    </div>
+<div class="center">
+  <button class="btn" id="openVideoBtn">Videoyu Aç</button>
+</div>
+  </div>
+
 
   <div class="content-second">
     <h1>Türkiye’de Kuraklık Tehdidi: Su Kaynakları Azalıyor.</h1>
