--- a/templates/page4.html
+++ b/templates/page4.html
@@ -113,6 +113,9 @@
     <br>
     <br>
     <a href="https://tr.euronews.com/green/2025/11/09/istanbul-ve-izmirde-su-krizi-derinlesiyor-neden-deniz-suyunu-aritmiyoruz" class="btn2">Kullanılan Kaynak (Haber 3)</a>
+    <br>
+    <br>
+    <a href="https://hthayat.haberturk.com/su-ile-ilgili-40-ilginc-gercek-1078885" class="btn2">Kullanılan Kaynak (Su ile İlgili İlginç Gerçekler)</a>
   </div>
 
 </body>
